subprojects/groovy-parser-antlr4/src/test/resources/fail/Modifier_04x.groovy
class A {
    private public a
}